[package]
name = "throttled-reader"
version = "1.0.0"

description = "An io::Read proxy that limits calls to read()"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/throttled-reader"
homepage = "https://github.com/jonhoo/throttled-reader"
repository = "https://github.com/jonhoo/throttled-reader.git"

keywords = ["io", "proxy", "throttling", "wrapper"]
categories = ["asynchronous", "rust-patterns", "network-programming"]

license = "MIT/Apache-2.0"

[badges]
travis-ci = { repository = "jonhoo/throttled-reader" }

[dependencies]
